--- a/docs/book.toml
+++ b/docs/book.toml
@@ -3,3 +3,7 @@ authors = ["RenYan Wei"]
 language = "en"
 src = "src"
 title = "Hello Go"
+
+[output.html]
+git-repository-url = "https://github.com/savechina/hello-go"
+git-repository-icon = "fa-github"
